[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodus-http"
version = "0.1.0"
description = "Outbound HTTP client with circuit breaker, retry, and OTel trace propagation"
authors = [{ name = "Shawn Knight" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
circuit-breaker = ["nodus-circuit-breaker>=0.1.0"]
otel             = ["opentelemetry-api>=1.0.0"]
retry            = ["tenacity>=8.0.0"]
dev              = ["pytest>=8.0", "pytest-asyncio>=0.21", "respx>=0.20.0",
                    "nodus-circuit-breaker>=0.1.0"]

[project.urls]
Homepage = "https://github.com/Masterplanner25/nodus-http"
Repository = "https://github.com/Masterplanner25/nodus-http"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodus_http*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
